### 28-Apr-2021 - MDD - Version 3.6.1
    - Bug fix to address a problem detected when processing a Tungsten flat with a high background.
      Uninitialized values were used for further computation causing an eventual exception.

### 31-Dec-2020 - MDD - Version 3.6.0
    - Implementation of a significantly upgraded CTE correction as defined/derived by J. Anderson.
      The upgraded CTE algorithm is also streamlined and executes faster then the previous version.

### 12-Aug-2020 - MDD - Version 3.5.2
    - Added MJD as a parameterized variable for the PHOTMODE keyword to
      enable a time-dependent photometric correction for the UVIS only.
    - Fixed a bug in the IMPHTTAB package to support properly data with 
      multiple imsets, in conjunction with a parameterized value.

### 24-Jun-2020 - MDD - Version 3.5.1
    - Replaced/modified routines based upon copyright numerical recipes routines.
      Updates implemented Oct 2019, but installation delayed for higher priority updates.

### 14-Oct-2018 - JAN/MDD - Version 3.5.0
    - Bug fixes to the CTE correction to fix out of bounds memory access and remove unnecessary critical section.

### 19-Jan-2018 - JAN/MDD - Version 3.4.2
    - A number of code robustness improvements (address memory leaks, fix detected bugs) were implemented.

### 10-Apr-2016 - MLS - Version 3.4.1
    - Fixed missed init for header vars in cte code

### 02-Apr-2016 - MLS - Version 3.4.1
    - Fixed logic brackets in subarray prescan bias call which didn't explicitly do the gain correction in the if loop, see Issue #55
    - Fixed double statement, see Issue #63

### 27-Mar-2017 - MLS - Version 3.4.1
    - Update photometry keyword descriptions in UVIS

### 28-Sep-2016 - MLS - Version 3.4
    - Fixed memory allocation around one more print

### 26-Sep-2016 - MLS - Version 3.4
    - Fixed memory allocation around prints

### 20-Sep-2016 - MLS - Version 3.4