@@ -1,3 +1,9 @@
+27-May-2021 - MDD - Version 3.6.2
+    - Bug fix to address calwf3.e crashing (Abort trap: 6) when taking an existing *_ima.fits (IR) file
+      (produced with FLATCORR=PERFORM and CRCORR=OMIT) with CRCORR set to PERFORM. This reentrant
+      processing is fundamental to being able to remove the variable IR background during the course
+      of an exposure.  Problem: char variable declared too small to hold its largest possible contents.
+
 28-Apr-2021 - MDD - Version 3.6.1
     - Bug fix to address a problem detected when processing a Tungsten flat with a high background.
       Uninitialized values were used for further computation causing an eventual exception.
